# test-runner

./: .coveragerc  .travis.yml  MANIFEST.in  Makefile  README.md  dev-requirements.txt  pylintrc  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.py
doc/: development.md
testrunner/: __init__.py  __version__.py  runner.py
testrunner/runners/: __init__.py  abstract_runner.py  nose2_runner.py  nose_runner.py  pytest_runner.py  setup_py_runner.py  tox_runner.py
testrunner/utils/: context_managers.py  preconditions.py  virtual_environment.py
tests/: __init__.py  test_runner.py
tests/runners/: test_abstract_runner.py  test_nose2_runner.py  test_nose_runner.py  test_pytest_runner.py  test_setup_py_runner.py  test_tox_runner.py
tests/utils/: test_context_managers.py  test_preconditions.py  test_virtual_environment.py
